@@ -4,6 +4,12 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.0.26) stable; urgency=low
+
+  * osparser: more log_prog in folderlink and getstring
+
+-- Detlef Oertel <d.oertel@uib.de>  Mo, 30 Jul 2018:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.0.25) stable; urgency=low
 
   * osconf: readConfigFromService: more debug and try-except with
